@@ -189,8 +189,9 @@ FORCEINLINE VOID PhChangeShStateTn(
 #define PHPRTLC_PACKAGENAME 72
 #define PHPRTLC_APPID 73
 #define PHPRTLC_DPIAWARENESS 74
+#define PHPRTLC_CFGUARD 75
 
-#define PHPRTLC_MAXIMUM 75
+#define PHPRTLC_MAXIMUM 76
 #define PHPRTLC_IOGROUP_COUNT 9
 
 #define PHPN_WSCOUNTERS 0x1
